# CPM-Libraries

./: 404.html  CMakeLists.txt  README.md  cpm.dependencies  index.html  lines.html  mkdocs.yml  more_info.yaml  packages.html
.github/: ci.yml  publish_docs.yml
.github/workflows/: ci.yml  ci_on_pr.yml  ci_onmerge_publish_docs.yml  cron_daily_cpm_version.yml  cron_weekly.yml  weekly.yml
docs/: index.md  lines.md  packages.md
docs/javascript/sorts/: tablesort.filesize.js  tablesort.number.js
docs/stylesheets/: extra.css
javascript/: inittablesort.js  tablesort.js
javascript/sorts/: tablesort.date.js  tablesort.dotsep.js  tablesort.monthname.js
libraries/7-zip/: 7-zip.cpp  CMakeLists.txt  cpmpack.json
libraries/abseil/: CMakeLists.txt  abseil.cpp  cpmpack.json
libraries/benchmark/: CMakeLists.txt  benchmark.cpp  cpmpack.json
libraries/bit7z/: CMakeLists.txt  bit7z.cpp  cpmpack.json
libraries/bzip2/: CMakeLists.txt  bzip2.cpp  cpmpack.json
libraries/catch2/: CMakeLists.txt  catch2.cpp  cpmpack.json
libraries/cereal/: CMakeLists.txt  cpmpack.json
libraries/cgraph/: CMakeLists.txt  cgraph.cpp  cpmpack.json
libraries/cndl/: CMakeLists.txt  cndl.cpp  cpmpack.json
libraries/ctre/: CMakeLists.txt  cpmpack.json  ctre.cpp
libraries/cxxopts/: CMakeLists.txt  cpmpack.json  cxxopts.cpp
libraries/doctest/: CMakeLists.txt  cpmpack.json
libraries/flatbuffers/: CMakeLists.txt  cpmpack.json  flatbuffers.cpp
libraries/fmindex-collection/: CMakeLists.txt  cpmpack.json
libraries/fmt/: CMakeLists.txt  cpmpack.json  fmt.cpp
libraries/glad/: CMakeLists.txt  cpmpack.json  glad.cpp
libraries/googletest/: CMakeLists.txt  cpmpack.json
libraries/ivio/: CMakeLists.txt  cpmpack.json
libraries/jsoncpp/: CMakeLists.txt  cpmpack.json  jsoncpp.cpp
libraries/libsais/: CMakeLists.txt  cpmpack.json  libsais.cpp
libraries/libsamplerate/: CMakeLists.txt  cpmpack.json  libsamplerate.cpp
libraries/libsndfile/: CMakeLists.txt  cpmpack.json  libsndfile.cpp
libraries/linenoise/: CMakeLists.txt  cpmpack.json  linenoise.cpp
libraries/matplotplusplus/: CMakeLists.txt  cpmpack.json  matplotplusplus.cpp
libraries/mimalloc/: CMakeLists.txt  cpmpack.json  mimalloc.cpp
libraries/nanobench/: CMakeLists.txt  cpmpack.json
libraries/nlohmann_json/: CMakeLists.txt  cpmpack.json  nlohmann_json.cpp
libraries/oniguruma/: CMakeLists.txt  cpmpack.json  oniguruma.cpp
libraries/pcre2/: CMakeLists.txt  cpmpack.json
libraries/progress-cpp/: CMakeLists.txt  cpmpack.json  progress-cpp.cpp
libraries/pugixml/: CMakeLists.txt  cpmpack.json
libraries/pybind11/: CMakeLists.txt  cpmpack.json  pybind11.cpp
libraries/rang/: CMakeLists.txt  cpmpack.json  rang.cpp
libraries/rapidyaml/: CMakeLists.txt  cpmpack.json  rapidyaml.cpp
libraries/re2/: CMakeLists.txt  cpmpack.json  re2.cpp
libraries/reflect/: CMakeLists.txt  cpmpack.json
libraries/robin-hood-hashing/: CMakeLists.txt  cpmpack.json  robin-hood-hashing.cpp
libraries/sdsl-lite/: CMakeLists.txt  cpmpack.json  sdsl-lite.cpp
libraries/simde/: CMakeLists.txt  cpmpack.json  simde.cpp
libraries/simplyfile/: CMakeLists.txt  simplyfile.cpp
libraries/srell/: CMakeLists.txt  cpmpack.json
libraries/tabulate/: CMakeLists.txt  cpmpack.json  tabulate.cpp
libraries/tomlplusplus/: CMakeLists.txt  cpmpack.json  tomlplusplus.cpp
libraries/unordered_dense/: CMakeLists.txt  cpmpack.json
libraries/variant-lite/: CMakeLists.txt  cpmpack.json  variant-lite.cpp
libraries/xsimd/: CMakeLists.txt  cpmpack.json  xsimd.cpp
libraries/xtl/: CMakeLists.txt  cpmpack.json  xtl.cpp
libraries/xxhash/: CMakeLists.txt  cpmpack.json
libraries/yaml-cpp/: CMakeLists.txt  cpmpack.json  yaml-cpp.cpp
libraries/zlib/: CMakeLists.txt  cpmpack.json  zlib.cpp
libraries/zstd/: CMakeLists.txt  cpmpack.json  zstd.cpp
scripts/: convert.sh
src/: amplitudeaudiosdk.cpp  backward-cpp.cpp  boost.cpp  cereal.cpp  cinder.cpp  cxxopts.cpp  doctest.cpp  fmindex-collection.cpp  googletest.cpp  hyperscan.cpp  ivio.cpp  nanobench.cpp  pcre2.cpp  pugixml.cpp  reflect.cpp  sfml.cpp  srell.cpp  tabulate.cpp  unordered_dense.cpp  xxhash.cpp
